SWA-23: fix tests